# ParquetAnnotations

./: CMakeLists.txt  README.md
src/: mainwindow.cpp  mainwindow.h  parquet_reader.cpp  parquet_reader.h
